--- a/app/globals.scss
+++ b/app/globals.scss
@@ -19,8 +19,14 @@
   }
 }
 
+// LAYOUT
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.primary-content-container {
+  width: 80%;
+  margin: 0 auto;
 }
