--- a/app/globals.scss
+++ b/app/globals.scss
@@ -28,5 +28,7 @@ body {
 
 .primary-content-container {
   width: 80%;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
