--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,8 +1,8 @@
 @import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #dcf0f9;
+  --foreground: #ffffff;
 }
 
 @theme inline {
